// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BanAutocompleteNgComponent > should create > clicked 1`] = `
"<div id="root0" ng-version="19.2.1"><div class="ng-autocomplete"><ng-autocomplete class="ng-autocomplete" ng-reflect-data="[object Object],[object Object" ng-reflect-placeholder="Saisisez une adresse" ng-reflect-min-query-length="3" ng-reflect-search-keyword="label" ng-reflect-item-template="[object Object]" ng-reflect-not-found-template="[object Object]" ng-reflect-custom-filter="customFilter(items, query) {
 "><div aria-owns="suggestions suggestions-history" class="autocomplete-container" ng-reflect-ng-class="[object Object]" aria-expanded="false"><div class="input-container"><input type="text" aria-autocomplete="list" role="combobox" autocomplete="off" placeholder="Saisisez une adresse" ng-reflect-model="Grenoble" aria-label="Saisisez une adresse" class="ng-untouched ng-valid ng-dirty"><div class="x"><i aria-label="Close" class="material-icons">close</i></div><!--bindings={
  "ng-reflect-ng-if": "true"
}--><!--bindings={}--></div><div id="suggestions" role="listbox" class="suggestions-container is-visible" ng-reflect-ng-class="[object Object]"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><ul><!--bindings={
  "ng-reflect-ng-for-of": ""
}--></ul></div><div id="suggestions-history" role="listbox" class="suggestions-container is-hidden" ng-reflect-ng-class="[object Object]"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><ul><!--bindings={
  "ng-reflect-ng-for-of": ""
}--></ul></div><!--bindings={
  "ng-reflect-ng-if": "false"
}--></div><!--bindings={
  "ng-reflect-ng-if": "false"
}--></ng-autocomplete><!--container--><!--container--></div></div>"
`;

exports[`BanAutocompleteNgComponent > should create > empty 1`] = `
"<div id="root0" ng-version="19.2.1"><div class="ng-autocomplete"><ng-autocomplete class="ng-autocomplete" ng-reflect-data="" ng-reflect-placeholder="Saisisez une adresse" ng-reflect-min-query-length="3" ng-reflect-search-keyword="label" ng-reflect-item-template="[object Object]" ng-reflect-not-found-template="[object Object]" ng-reflect-custom-filter="customFilter(items, query) {
 "><div aria-owns="suggestions suggestions-history" class="autocomplete-container" ng-reflect-ng-class="[object Object]" aria-expanded="false"><div class="input-container"><input type="text" aria-autocomplete="list" role="combobox" autocomplete="off" placeholder="Saisisez une adresse" ng-reflect-model="" aria-label="Saisisez une adresse" class="ng-untouched ng-pristine ng-valid"><!--bindings={
  "ng-reflect-ng-if": ""
}--><!--bindings={}--></div><div id="suggestions" role="listbox" class="suggestions-container is-hidden" ng-reflect-ng-class="[object Object]"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><ul><!--bindings={
  "ng-reflect-ng-for-of": ""
}--></ul></div><div id="suggestions-history" role="listbox" class="suggestions-container is-visible" ng-reflect-ng-class="[object Object]"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><ul><!--bindings={
  "ng-reflect-ng-for-of": ""
}--></ul></div><!--bindings={
  "ng-reflect-ng-if": "false"
}--></div><!--bindings={
  "ng-reflect-ng-if": "false"
}--></ng-autocomplete><!--container--><!--container--></div></div>"
`;

exports[`BanAutocompleteNgComponent > should create > suggests 1`] = `
"<div id="root0" ng-version="19.2.1"><div class="ng-autocomplete"><ng-autocomplete class="ng-autocomplete" ng-reflect-data="[object Object],[object Object" ng-reflect-placeholder="Saisisez une adresse" ng-reflect-min-query-length="3" ng-reflect-search-keyword="label" ng-reflect-item-template="[object Object]" ng-reflect-not-found-template="[object Object]" ng-reflect-custom-filter="customFilter(items, query) {
 "><div aria-owns="suggestions suggestions-history" class="autocomplete-container active" ng-reflect-ng-class="[object Object]" aria-expanded="true"><div class="input-container"><input type="text" aria-autocomplete="list" role="combobox" autocomplete="off" placeholder="Saisisez une adresse" ng-reflect-model="Gre" aria-label="Saisisez une adresse" class="ng-untouched ng-valid ng-dirty"><div class="x"><i aria-label="Close" class="material-icons">close</i></div><!--bindings={
  "ng-reflect-ng-if": "true"
}--><!--bindings={}--></div><div id="suggestions" role="listbox" class="suggestions-container is-visible" ng-reflect-ng-class="[object Object]"><!--bindings={
  "ng-reflect-ng-if": ""
}--><ul><li class="item"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><div><a>Grenoble</a><!--bindings={
  "ng-reflect-ng-template-outlet-context": "[object Object]"
}--></div><!--bindings={
  "ng-reflect-ng-if": "true"
}--></li><li class="item"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><div><a>grenoble 85510 Le Boupère</a><!--bindings={
  "ng-reflect-ng-template-outlet-context": "[object Object]"
}--></div><!--bindings={
  "ng-reflect-ng-if": "true"
}--></li><li class="item"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><div><a>Grenod 42800 Saint-Joseph</a><!--bindings={
  "ng-reflect-ng-template-outlet-context": "[object Object]"
}--></div><!--bindings={
  "ng-reflect-ng-if": "true"
}--></li><li class="item"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><div><a>Grenoble 28400 Arcisses</a><!--bindings={
  "ng-reflect-ng-template-outlet-context": "[object Object]"
}--></div><!--bindings={
  "ng-reflect-ng-if": "true"
}--></li><li class="item"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><div><a>Route de Grenoble 69800 Saint-Priest</a><!--bindings={
  "ng-reflect-ng-template-outlet-context": "[object Object]"
}--></div><!--bindings={
  "ng-reflect-ng-if": "true"
}--></li><li class="item"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><div><a>Rue de Grenoble 31500 Toulouse</a><!--bindings={
  "ng-reflect-ng-template-outlet-context": "[object Object]"
}--></div><!--bindings={
  "ng-reflect-ng-if": "true"
}--></li><li class="item"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><div><a>Avenue de Grenoble 93600 Aulnay-sous-Bois</a><!--bindings={
  "ng-reflect-ng-template-outlet-context": "[object Object]"
}--></div><!--bindings={
  "ng-reflect-ng-if": "true"
}--></li><!--bindings={
  "ng-reflect-ng-for-of": "[object Object],[object Object"
}--></ul></div><div id="suggestions-history" role="listbox" class="suggestions-container is-hidden" ng-reflect-ng-class="[object Object]"><!--bindings={
  "ng-reflect-ng-if": "false"
}--><ul><!--bindings={
  "ng-reflect-ng-for-of": ""
}--></ul></div><!--bindings={
  "ng-reflect-ng-if": "false"
}--></div><!--bindings={
  "ng-reflect-ng-if": "false"
}--></ng-autocomplete><!--container--><!--container--></div></div>"
`;
